# chat-rs

./: Cargo.toml  README.md  chat_rs_demo.webm.mov
client/: Cargo.toml
client/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
