[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[features]
json = ["dep:serde_json"]
bincode = ["dep:bincode"]
default = ["json"]
